[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/fonts/font_terminal.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/frames/bar2_fill.png" type="Texture" id=2]
[ext_resource path="res://Arena/team_pip.png" type="Texture" id=3]
[ext_resource path="res://Game/MatchInfo.gd" type="Script" id=4]
[ext_resource path="res://Arena/team_pip_frame.png" type="Texture" id=5]
[ext_resource path="res://ui/frames/ui_panel.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/frames/bar2_fg.png" type="Texture" id=7]
[ext_resource path="res://ui/frames/bar2_bg.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_top = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 0 )
border_blend = true

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="MatchInfo" type="MarginContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -318.0
margin_right = 318.0
margin_bottom = 119.0
grow_horizontal = 2
script = ExtResource( 4 )

[node name="PanelRow" type="HBoxContainer" parent="."]
margin_right = 636.0
margin_bottom = 119.0
custom_constants/separation = -16

[node name="Team1" type="PanelContainer" parent="PanelRow"]
margin_right = 224.0
margin_bottom = 119.0
rect_min_size = Vector2( 224, 96 )
size_flags_vertical = 4
custom_styles/panel = ExtResource( 6 )

[node name="TeamInfo" type="VBoxContainer" parent="PanelRow/Team1"]
margin_left = 18.0
margin_top = 18.0
margin_right = 206.0
margin_bottom = 101.0

[node name="TeamName" type="Label" parent="PanelRow/Team1/TeamInfo"]
margin_right = 188.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "Champion"
align = 1

[node name="TeamCount" type="TextureProgress" parent="PanelRow/Team1/TeamInfo"]
margin_top = 39.0
margin_right = 188.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 4.0
value = 4.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 3 )
fill_mode = 1
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="TeamHype" type="TextureProgress" parent="PanelRow/Team1/TeamInfo"]
margin_top = 59.0
margin_right = 188.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 24 )
texture_under = ExtResource( 8 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 2 )
fill_mode = 1
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="Versus" type="PanelContainer" parent="PanelRow"]
margin_left = 208.0
margin_right = 428.0
margin_bottom = 119.0
size_flags_horizontal = 5
custom_styles/panel = ExtResource( 6 )

[node name="MatchInfo" type="VBoxContainer" parent="PanelRow/Versus"]
margin_left = 18.0
margin_top = 18.0
margin_right = 202.0
margin_bottom = 101.0

[node name="Tournament" type="Label" parent="PanelRow/Versus/MatchInfo"]
margin_right = 184.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Tournament 1"
align = 1

[node name="Round" type="Label" parent="PanelRow/Versus/MatchInfo"]
margin_top = 23.0
margin_right = 184.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Quarterfinal 1"
align = 1

[node name="VS" type="Label" parent="PanelRow/Versus/MatchInfo"]
margin_top = 46.0
margin_right = 184.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "<- VS ->"
align = 1

[node name="Team2" type="PanelContainer" parent="PanelRow"]
show_behind_parent = true
margin_left = 412.0
margin_right = 636.0
margin_bottom = 119.0
rect_min_size = Vector2( 224, 96 )
size_flags_vertical = 4
custom_styles/panel = ExtResource( 6 )

[node name="TeamInfo" type="VBoxContainer" parent="PanelRow/Team2"]
margin_left = 18.0
margin_top = 18.0
margin_right = 206.0
margin_bottom = 101.0

[node name="TeamName" type="Label" parent="PanelRow/Team2/TeamInfo"]
margin_right = 188.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "Champion"
align = 1

[node name="TeamCount" type="TextureProgress" parent="PanelRow/Team2/TeamInfo"]
margin_top = 39.0
margin_right = 188.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 4.0
value = 4.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="TeamHype" type="TextureProgress" parent="PanelRow/Team2/TeamInfo"]
margin_top = 59.0
margin_right = 188.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 24 )
texture_under = ExtResource( 8 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
